test_output.txt
[baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
  console.log
    WeatherService initialized with provider: open-meteo

      at new log (src/renderer/services/WeatherService.js:116:13)

  console.error
    Error reading settings: Error: SettingsManager not initialized. Call initialize() first.
        at SettingsManager.#getElectron (/Users/cemakpolat/Development/top-projects/atmos-sphere/src/renderer/services/SettingsManager.js:60:13)
        at SettingsManager.read (/Users/cemakpolat/Development/top-projects/atmos-sphere/src/renderer/services/SettingsManager.js:76:52)
        at SettingsManager.read [as getAnimationPreferences] (/Users/cemakpolat/Development/top-projects/atmos-sphere/src/renderer/services/SettingsManager.js:201:44)
        at CardManager.getAnimationPreferences (/Users/cemakpolat/Development/top-projects/atmos-sphere/src/renderer/services/CardManager.js:417:52)
        at CardManager.initializeCardAnimation [as createCard] (/Users/cemakpolat/Development/top-projects/atmos-sphere/src/renderer/services/CardManager.js:146:17)
        at Object.createCard (/Users/cemakpolat/Development/top-projects/atmos-sphere/src/renderer/__tests__/integration.test.js:89:32)
        at processTicksAndRejections (node:internal/process/task_queues:105:5)

      27 |     return; // Suppress these errors
      28 |   }
    > 29 |   originalConsoleError(...args);
         |   ^
      30 | };
      31 |
      32 | // Mock Electron's ipcRenderer

      at console.originalConsoleError [as error] (src/renderer/setupTests.js:29:3)
      at SettingsManager.error [as read] (src/renderer/services/SettingsManager.js:81:15)
      at SettingsManager.read [as getAnimationPreferences] (src/renderer/services/SettingsManager.js:201:44)
      at CardManager.getAnimationPreferences (src/renderer/services/CardManager.js:417:52)
      at CardManager.initializeCardAnimation [as createCard] (src/renderer/services/CardManager.js:146:17)
      at Object.createCard (src/renderer/__tests__/integration.test.js:89:32)

  console.log
    Started Clouds animation for weather code 2 in card

      at WeatherAnimationManager.log [as createCardAnimation] (src/renderer/services/animations/WeatherAnimationManager.js:165:13)

  console.log
    Animation started for London with weather code 2

      at CardManager.log [as initializeCardAnimation] (src/renderer/services/CardManager.js:430:21)

  console.log
    Theme applied: ocean-breeze

      at ThemeManager.log [as apply] (src/renderer/services/ThemeManager.js:77:13)

  console.log
    Theme saved: ocean-breeze

      at ThemeManager.log [as saveAndApply] (src/renderer/services/ThemeManager.js:154:15)

  console.log
    Theme mode applied: light

      at ThemeManager.log [as applyMode] (src/renderer/services/ThemeManager.js:96:13)

  console.log
    Theme mode applied: dark

      at ThemeManager.log [as applyMode] (src/renderer/services/ThemeManager.js:96:13)

  console.warn
    Session storage is not available

      30 |   static save(key, data) {
      31 |     if (!StorageService.isAvailable()) {
    > 32 |       console.warn('Session storage is not available');
         |               ^
      33 |       return false;
      34 |     }
      35 |     

      at StorageService.warn (src/renderer/services/StorageService.js:32:15)
      at Object.save (src/renderer/__tests__/integration.test.js:267:37)

  console.error
    Error retrieving from session storage: SyntaxError: Unexpected token 'i', "invalid json {{{" is not valid JSON
        at JSON.parse (<anonymous>)
        at StorageService.parse [as get] (/Users/cemakpolat/Development/top-projects/atmos-sphere/src/renderer/services/StorageService.js:57:26)
        at Object.get (/Users/cemakpolat/Development/top-projects/atmos-sphere/src/renderer/__tests__/integration.test.js:278:37)
        at Promise.then.completed (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/utils.js:298:28)
        at new Promise (<anonymous>)
        at callAsyncCircusFn (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/utils.js:231:10)
        at _callCircusTest (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/run.js:316:40)
        at processTicksAndRejections (node:internal/process/task_queues:105:5)
        at _runTest (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/run.js:252:3)
        at _runTestsForDescribeBlock (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/run.js:126:9)
        at _runTestsForDescribeBlock (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/run.js:121:9)
        at _runTestsForDescribeBlock (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/run.js:121:9)
        at run (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/run.js:71:3)
        at runAndTransformResultsToJestFormat (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
        at jestAdapter (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
        at runTestInternal (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-runner/build/runTest.js:367:16)
        at runTest (/Users/cemakpolat/Development/top-projects/atmos-sphere/node_modules/jest-runner/build/runTest.js:444:34)

      27 |     return; // Suppress these errors
      28 |   }
    > 29 |   originalConsoleError(...args);
         |   ^
      30 | };
      31 |
      32 | // Mock Electron's ipcRenderer

      at console.originalConsoleError [as error] (src/renderer/setupTests.js:29:3)
      at StorageService.error [as get] (src/renderer/services/StorageService.js:59:15)
      at Object.get (src/renderer/__tests__/integration.test.js:278:37)

FAIL src/renderer/__tests__/integration.test.js
  Weather App Integration Tests
    Complete User Flow: Search and Display Weather
      ✕ should fetch weather and create a card (26 ms)
    Settings and Temperature Unit Conversion
      ✓ should convert temperatures when unit changes
      ✓ should format multiple temperatures with correct unit (1 ms)
    Theme Management Flow
      ✓ should apply theme and persist settings (1 ms)
      ✓ should toggle between light and dark modes (1 ms)
    Storage Integration
      ✓ should save and retrieve city data
      ✓ should handle complex nested data (1 ms)
    Weather Alert Flow
      ✓ should detect and display weather alerts
    Multi-City Weather Management
      ✓ should handle multiple cities simultaneously
    Error Handling and Recovery
      ✓ should handle network errors gracefully
      ✓ should handle storage errors gracefully (1 ms)
      ✓ should recover from corrupted storage data (1 ms)
    Performance and Caching
      ✓ should cache weather data to reduce API calls
    Accessibility and User Experience
      ✓ should maintain ARIA labels for accessibility
      ✓ should display loading states
    Data Validation
      ✓ should validate weather data structure (1 ms)
      ✓ should reject invalid weather data

  ● Weather App Integration Tests › Complete User Flow: Search and Display Weather › should fetch weather and create a card

    expect(received).toBeTruthy()

    Received: null

      91 |       // Verify card creation
      92 |       expect(card).toBeTruthy();
    > 93 |       expect(card.querySelector('.city-name')).toBeTruthy();
         |                                                ^
      94 |       expect(WeatherService.fetchWeatherByCityName).toHaveBeenCalledWith('London');
      95 |     });
      96 |   });

      at Object.toBeTruthy (src/renderer/__tests__/integration.test.js:93:48)

Test Suites: 1 failed, 1 total
Tests:       1 failed, 16 passed, 17 total
Snapshots:   0 total
Time:        0.52 s, estimated 1 s
Ran all test suites matching /src\/renderer\/__tests__\/integration.test.js/i.
